# AI-Task-Notify-Hook

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  workspace.toml
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  polylith-ci.yml  release.yml
bases/ai_task_notify_hook/cli/: __init__.py  core.py
components/ai_task_notify_hook/config/: __init__.py  core.py  loader.py  models.py
components/ai_task_notify_hook/logging/: __init__.py  core.py
components/ai_task_notify_hook/models/: README.md  __init__.py  core.py
components/ai_task_notify_hook/notification/: __init__.py  core.py  protocol.py
components/ai_task_notify_hook/validation/: README.md  __init__.py  core.py  exceptions.py
config/: config.json  logging_config.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  REFACTORING_2025_01_11.md  make.bat
docs/source/: conf.py  configuration.rst  index.rst  installation.rst  license.rst  troubleshooting.rst  usage.rst
docs/source/_static/: custom.css
docs/source/api/: ai_task_notify_hook.rst  aitask_notify_hook.rst  cli.core.rst  cli.rst  modules.rst
docs/source/development/: changelog.rst  contributing.rst
projects/notify-cli/: pyproject.toml
projects/notify-server/: pyproject.toml
projects/notify-tool/: pyproject.toml
scripts/: deploy.sh
src/ai_task_notify_hook/: __init__.py  notify.py
src/ai_task_notify_hook/config/: __init__.py  config_loader.py  log_config.py
src/aitask_notify_hook/: __init__.py  notify.py
src/aitask_notify_hook/config/: __init__.py  config_loader.py
test/: conftest.py  test_type_checking.py
test/bases/ai_task_notify_hook/cli/: test_cli.py  test_core.py
test/components/ai_task_notify_hook/config/: test_core.py  test_loader.py
test/components/ai_task_notify_hook/logging/: test_core.py
test/components/ai_task_notify_hook/logging_tests/: test_logger.py
test/components/ai_task_notify_hook/models/: __init__.py  test_benchmark.py  test_core.py
test/components/ai_task_notify_hook/notification/: test_core.py  test_notification.py
test/components/ai_task_notify_hook/validation/: __init__.py  test_validation.py
test/integration/: __init__.py  test_e2e_workflows.py
test/performance/: __init__.py  test_profiling.py
