[project]
name = "AI-Task-Notify-Hook"
version = "1.0.0"
description = "Simple Windows notification tool for Claude Code hooks"
authors = [
    {name = "User"}
]
dependencies = [
    "colorama>=0.4.6",
    "orjson>=3.11.3",
    "plyer>=2.1.0",
    "pyyaml>=6.0.2",
    "structlog>=25.4.0",
]
requires-python = ">=3.12"

[project.scripts]
AI-Task-Notify-Hook = "ai_task_notify_hook.notify:main"

[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_task_notify_hook"]

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.hatch.build.hooks.polylith-bricks]
# NOTE: this section is needed to enable the hook in the build process, even if empty

[tool.uv]
dev-dependencies = [
    "mypy>=1.18.2",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    # Documentation dependencies
    "sphinx>=7.3.0",
    "sphinx-rtd-theme>=3.0.0",
    "myst-parser>=4.0.0",
    # Testing dependencies (future)
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "polylith-cli>=1.35.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[tool.pylance]
ignore = ["**/site-packages/**"]

# Sphinx documentation configuration
[tool.sphinx]
source-dir = "docs/source"
build-dir = "docs/build"

# Project URLs for PyPI
[project.urls]
"Homepage" = "https://github.com/tay2501/AI-Task-Notify-Hook"
"Documentation" = "https://github.com/tay2501/AI-Task-Notify-Hook"
"Repository" = "https://github.com/tay2501/AI-Task-Notify-Hook.git"
"Bug Tracker" = "https://github.com/tay2501/AI-Task-Notify-Hook/issues"

# Optional dependencies for documentation building
[project.optional-dependencies]
docs = [
    "sphinx>=7.3.0",
    "sphinx-rtd-theme>=3.0.0",
    "myst-parser>=4.0.0",
]
dev = [
    "mypy>=1.18.2",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
